--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,6 +1,15 @@
+
 .span12{
-	co: white;
+	background-color: #800F25;
+}
+
+.span6{
+	background-color: black;
+}
+
+#name1{
+	font:white;
 	background-color: #800F25;
 	height:40px;
-	padding: 10px
+	padding: 15px
 }
